abovevtt.css
/* ... */
.aoe-style-nature{
    background-image: url(https://www.tilingtextures.com/wp-content/uploads/2017/04/0527-1-512x512.jpg);
    filter: brightness(1.2) contrast(1.2);
}
.aoe-style-necrotic {
    background-image: url(https://www.myfreetextures.com/wp-content/uploads/2014/10/abstract8-900x900.jpg);
}
.aoe-style-piercing{
    background-image: url(https://previews.123rf.com/images/sylverarts/sylverarts1801/sylverarts180100741/92992928-horror-style-horrible-seamless-pattern-vector-background-blackthorn-branches-with-thorns-stylish-end.jpg);
}
.aoe-style-poison {
    background-image: url(https://www.tilingtextures.com/wp-content/uploads/2017/02/0005-512x512.jpg);
    box-shadow: inset -20px -20px 2px 1000px rgba(119, 247, 0, 0.52);
}
.aoe-style-psychic {
    background-image: url(https://images.assetsdelivery.com/compings_v2/almagami/almagami1912/almagami191200125.jpg);
    box-shadow: inset -20px -20px 2px 1000px rgba(115, 10, 235, 0.49);
}
.aoe-style-radiant {
    background-image: url(https://www.tilingtextures.com/wp-content/uploads/2019/06/0097-512x512.jpg);
    background-size: 200px
}
.aoe-style-thunder{
    background-image: url(https://www.tilingtextures.com/wp-content/uploads/2018/11/0069-512x512.jpg);
}
.aoe-style-water{
    background-image: url(https://opengameart.org/sites/default/files/styles/medium/public/oga-textures/12976/caust_009.png);
    box-shadow: inset -20px -20px 2px 1000px rgba(49, 177, 246, 0.49);
}

.aoe-style-darkness{
    filter: grayscale(1) brightness(0.2) !important;
}

/* SPECIFIC SPELL STYLES */

.aoe-style-stinking-cloud{
    box-shadow: inset -20px -20px 2px 1000px rgba(49, 246, 85, 0.49) !important;
}



/* END AOE STYLES */


.token.isAoe .token-image,
.token.isAoe .token-image *,
.token.isAoe:before,
.token.isAoe div#note {
    visibility: visible;
}
.lineAoe{
    pointer-events:none;
}
.lineAoe *{
    pointer-events:auto;
}
.aoe-token-tileable {
    height: 100%;
    width: 100%;
    opacity: 50%;
    background-repeat: repeat;
    background-size: 300px;
    filter: blur(0.5px);
    position: absolute;
    animation: mymove 5s infinite alternate ease-in-out ;
}
#token_map_items .underDarkness .aoe-token-tileable{
    background-size: calc(300px / var(--scene-scale));
    filter: none;
}
#token_map_items .underDarkness .aoe-border-basic{
    border-width: calc(10px / var(--scene-scale));
}
@keyframes mymove {
    from{
        opacity: 0.3
    }
    to {
        opacity: 0.7
    }
  }
.above-vtt-container-roll-output{
    position: relative;
    top: 33%;
    left: 0px;
    width: 220px;
    text-wrap: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
    color: #716f6f;
    font-size: 10px;
    font-weight: bold;
    line-height: 10px;
}
.abovevtt-roll-container{
    position:relative;
    width: 100%;
    cursor: pointer;
    display: flex;
    -webkit-box-align: center;
    align-items: center;
    flex-direction: row;
    -webkit-box-pack: justify;
    justify-content: space-between;
}
.abovevtt-roll-container [class*='-Divider']{
    margin: 0px 12px;
    flex: 0 0 auto;
}
.abovevtt-roll-container [class*='-Result']{
    flex: 1 1 auto;
    min-width: 0px;
    overflow: hidden;
    top: 0px;
    position: relative;
}
.abovevtt-roll-container [class*='Total-Other-Collapsed-Pending-Flex'] {
    min-width: 2.5rem;
    font-size: 2rem;
    font-weight: bold;
    flex: 0 0 auto;
    line-height: 1;
    display: flex;
    -webkit-box-align: center;
    align-items: center;
    flex-direction: row;
    -webkit-box-pack: center;
    justify-content: center;
}

.abovevtt-roll-container .above-vtt-roll-whisper {
    position: absolute;
    top: 28px;
    left: 0px;
    width: 220px;
    text-wrap: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
    color: #716f6f;
    font-size: 10px;
    font-weight: bold;
}
div.token-image {
    width: 100%;
    height: 100%;
}
.ct-sidebar[class*='styles_sidebar'] {
    min-width: 340px !important;
}

.ct-sidebar[class*='styles_sidebar'] [class*='styles_content'] {
    min-width: 340px !important;
    max-width: 340px !important;
}

.token:before{
    transform: rotate(var(--token-rotation));
}

.markers-icon:before,
.context-menu-markers-icon:before {
    display: inline-block;
    width: 19px;
    height: 19px;
    top: 4px;
    position: relative;
    margin-right: 5px;
    content: "";
    background-size: 100%;
    background-position-x: 0;
    background-position-y: 0;
    background-repeat: no-repeat;
    flex-shrink: 1;
}
.markers-icon:before{
    top:0px;
}
input.condition-duration-input {
    position: relative !important;
    width: 22px !important;
    z-index: 2;
    text-align: right;
}

#tokenOptionsPopup [id*="flyout"] li {
    height: 24px;
    display: flex;
    justify-content: space-between;
    align-items: center;
}

#conditions-flyout li span:not(.condition-lock) {
    flex-shrink: 1;
    flex-grow: 1;
    text-overflow: ellipsis;
    overflow-wrap: break-word;
    white-space: nowrap;
    overflow: hidden;
}
.condition-duration-input,
.condition-duration-icon {
    display: none;
}
.condition-duration-icon:before{
    content:'\efbf';
    font-size: 19px;
    font-family: "Material Symbols Outlined", sans-serif !important;
    font-variation-settings: 'FILL' 0, 'wght' 400, 'GRAD' 0, 'opsz' 48;
}
.active-condition .condition-duration-input,
.active-condition .condition-duration-icon {
    display: block;
}
.condition-duration-icon{
    position:absolute;
    left: 144px;
    top: 1px;
    z-index: 2;
    opacity: 0.4;
    pointer-events:none;
}
.condition-duration-icon.hiddenIcon{
    display:none;
}
.markers-icon .condition-duration-icon{
    left: 152px;
}
.markers-icon[class*='icon-#'] input.condition-duration-input{
    left: 9px;
}
[class*='icon-#']::before {
    display: none;
}
.icon-advantage:before,
.context-menu-icon-advantage:before {
    background-image: url(assets/conditons/advantage.png);
}
/* ... */

